update jvm defaults to new presto recommendations
Summary:
Update the default values for jvm.config to reflect the new Presto
recommendations.

Task: SWARM-693

Test Plan: make test, test_configuration and test_server_install from product tests

Reviewers: cwallin, anu

Reviewed By: cwallin, anu

Subscribers: kbajda, mf186042

Differential Revision: https://phabricator.td.teradata.com/D741